# RedRender

./: CMakeLists.txt  README.md  main.cpp
game/: camera.h  entity.cpp  entity.h  light.h  model.cpp  model.h  space.cpp  space.h
input/: entity.h  image.cpp  model.cpp  model.h
math/: geometry.cpp  geometry.h  math.h
render/: camera.h  light.h  render_helper.h  scene.cpp  scene.h  texture.h
render_system/: draw.cpp  draw.h  render_data.cpp  render_data.h  render_system.cpp  render_system.h
resource/: cache_resource.cpp  cache_resource.h  create_scene.h
resource/model_resource/: image.c  image.h  mesh.h  res_helper.h  skeleton.cpp  skeleton.h  texture.cpp  texture.h
resource/scene_resource/: common_helper.h  light_handel.h  material_handel.h  model_handel.h  scene_proto.h  transform_handel.h
shaders/: mode_program.cpp  render_program.h  shaders.h
